n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: llm
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-http"
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.kailas.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
  tls:
    - hosts:
        - n8n.kailas.cloud
      secretName: n8n-kailas-cloud-tls
